// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "1") 1`] = `
"# typedoc-stubs

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](interfaces/CommentInterface.md)
- [Links to CommentInterface.propb](interfaces/CommentInterface.md)
- [CommentEnum.MemberB](enumerations/CommentEnum.md)
- [SameName:var](variables/SameName.md)
- [SameName:interface](interfaces/SameName.md)
- [SameName.prop](interfaces/SameName.md)
- [prop:var](variables/prop.md)

### External link

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

- [CommentEnum](enumerations/CommentEnum.md)

## Interfaces

- [CommentInterface](interfaces/CommentInterface.md)
- [SameName](interfaces/SameName.md)

## Variables

- [SameName](variables/SameName.md)
- [prop](variables/prop.md)
- [propb](variables/propb.md)
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "members") (Option Group "2") 1`] = `
"# typedoc-stubs

Comments form module comments

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](interfaces/CommentInterface.md) - Links to CommentInterface
- [Links to CommentInterface.prop](interfaces/CommentInterface.md#prop)
- [Links to CommentInterface.propb](interfaces/CommentInterface.md#propb)
- [CommentEnum.MemberB](enumerations/CommentEnum.md#memberb)
- [SameName:var](variables/SameName.md)
- [SameName:interface](interfaces/SameName.md)
- [SameName.prop](interfaces/SameName.md#prop)
- [prop:var](variables/prop.md)

### External link

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

| Enumeration | Description |
| :------ | :------ |
| [CommentEnum](enumerations/CommentEnum.md) | - |

## Interfaces

| Interface | Description |
| :------ | :------ |
| [CommentInterface](interfaces/CommentInterface.md) | - |
| [SameName](interfaces/SameName.md) | - |

## Variables

| Variable | Description |
| :------ | :------ |
| [SameName](variables/SameName.md) | - |
| [prop](variables/prop.md) | - |
| [propb](variables/propb.md) | - |
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "modules") (Option Group "1") 1`] = `
"# typedoc-stubs

Comments form module comments

## Contents

- [Links](docs.md#links)
  - [External link](docs.md#external-link)
- [Tag A](docs.md#tag-a)
- [Tag B](docs.md#tag-b)
- [Html And Jsx](docs.md#html-and-jsx)
- [Enumerations](docs.md#enumerations)
  - [CommentEnum](docs.md#commentenum)
- [Interfaces](docs.md#interfaces)
  - [CommentInterface](docs.md#commentinterface)
  - [SameName](docs.md#samename)
- [Variables](docs.md#variables)
  - [SameName](docs.md#samename-1)
  - [prop](docs.md#prop)
  - [propb](docs.md#propb)

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](docs.md#commentinterface) - Links to CommentInterface
- [Links to CommentInterface.prop](docs.md#commentinterface)
- [Links to CommentInterface.propb](docs.md#commentinterface)
- [CommentEnum.MemberB](docs.md#commentenum)
- [SameName:var](docs.md#samename-1)
- [SameName:interface](docs.md#samename)
- [SameName.prop](docs.md#samename)
- [prop:var](docs.md#prop)

### External link

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

### CommentEnum

#### Enumeration Members

| Member | Value | Description |
| :------ | :------ | :------ |
| \`Member\` | \`0\` | Comment for Member |
| \`MemberB\` | \`1\` | - |

## Interfaces

### CommentInterface

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
| \`propb\` | \`string\` | - |

***

### SameName

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | - |
| \`propb\` | \`string\` | - |

## Variables

### SameName

> **SameName**: \`true\`

***

### prop

> **\`const\`** **prop**: \`true\` = \`true\`

***

### propb

> **\`const\`** **propb**: \`true\` = \`true\`
"
`;

exports[`Comments should compile comments for module: (Output File Strategy "modules") (Option Group "2") 1`] = `
"# typedoc-stubs

Comments form module comments

## Contents

- [Links](docs.md#links)
  - [External link](docs.md#external-link)
- [Tag A](docs.md#tag-a)
- [Tag B](docs.md#tag-b)
- [Html And Jsx](docs.md#html-and-jsx)
- [Enumerations](docs.md#enumerations)
  - [CommentEnum](docs.md#commentenum)
- [Interfaces](docs.md#interfaces)
  - [CommentInterface](docs.md#commentinterface)
  - [SameName](docs.md#samename)
- [Variables](docs.md#variables)
  - [SameName](docs.md#samename-1)
  - [prop](docs.md#prop)
  - [propb](docs.md#propb)

## Links

Links using \`{@link}\` inline tags.

- [CommentInterface](docs.md#commentinterface) - Links to CommentInterface
- [Links to CommentInterface.prop](docs.md#prop)
- [Links to CommentInterface.propb](docs.md#propb)
- [CommentEnum.MemberB](docs.md#memberb)
- [SameName:var](docs.md#samename-1)
- [SameName:interface](docs.md#samename)
- [SameName.prop](docs.md#prop-1)
- [prop:var](docs.md#prop-2)

### External link

- [Google](https://www.google.com)
- [\`https://www.google.com\`](https://www.google.com)

## Tag A

Comments for a tag

## Tag B

Comments for tag written on same line

## Html And Jsx

A \`<tag>\` \`</tag>\`  in comments

Closing \`</element>\`  on its own

A \`<tag>\` in backticks

\`\`\`
A <tag> in a code block
Some <p> html </p> inside codeblock
\`\`\`

## Enumerations

### CommentEnum

#### Enumeration Members

| Member | Value | Description |
| :------ | :------ | :------ |
| <a id="member" name="member"></a> \`Member\` | \`0\` | Comment for Member |
| <a id="memberb" name="memberb"></a> \`MemberB\` | \`1\` | - |

## Interfaces

### CommentInterface

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop" name="prop"></a> \`prop\` | \`string\` | - |
| <a id="propb" name="propb"></a> \`propb\` | \`string\` | - |

***

### SameName

#### Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop-1" name="prop-1"></a> \`prop\` | \`string\` | - |
| <a id="propb-1" name="propb-1"></a> \`propb\` | \`string\` | - |

## Variables

### SameName

> **SameName**: \`true\`

***

### prop

> **\`const\`** **prop**: \`true\` = \`true\`

***

### propb

> **\`const\`** **propb**: \`true\` = \`true\`
"
`;
